--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "knex": "^3.1.0",
+    "mysql2": "^3.11.2"
+  }
 }
